js/js.translator/testData/incremental/invalidation/toplevelProperties/lib1/l1.6.kt
val globalVal = 3

inline val inlineGlobalVal: Int
    get() = 3
